--- a/app/Resources/views/admin/stays/list.html.twig
+++ b/app/Resources/views/admin/stays/list.html.twig
@@ -4,6 +4,10 @@
 
     <div class="container body-content">
         <h2><a href="{{ path('admin_stays') }}">All Stays</a></h2>
+        {% if stays|length == 0 %} 
+            <h4 class="text-center mt-5">Not found result!</h4>
+            <h4 class="text-center mb-5">Please, try again!</h4>
+        {% else %} 
         <div class="row">
             <table class="table table-striped table-hover">
                 <thead>
@@ -32,6 +36,7 @@
                 </tbody>
             </table>
         </div>
+        {% endif %}
     </div>
 
 {% endblock %}
