--- a/app/Resources/views/admin/users/list.html.twig
+++ b/app/Resources/views/admin/users/list.html.twig
@@ -11,6 +11,7 @@
                         <th>#</th>
                         <th>Email</th>
                         <th>Login Name</th>
+                        <th>Actions</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -20,6 +21,10 @@
                             <td>{{ user.id }}</td>
                             <td>{{ user.email }}</td>
                             <td>{{ user.loginName}}</td>
+                            <td>
+                                <a href="{{ path('admin_user_edit', { 'id': user.id}) }}" {% if user.isAdmin() %} class="td-actions-admin" {% endif %} >Edit</a>
+                                <a href="{{ path('admin_user_delete', {id: user.id}) }}" onClick="return confirm('Are you sure you want to delete?')" {% if user.isAdmin() %} class="td-actions-admin" {% endif %} >Delete</a>
+                            </td>
                         </tr>
                     {% endfor %}
                 </tbody>
