--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -16,11 +16,14 @@ legend {
 }
 .tr-admin {
     color: #ffffff;
-    background: #b40000;
+    background: #dc3545;
+}
+.td-actions-admin, .tr-admin a:hover {
+    color: #ffffff;
 }
 .table-hover tbody tr.tr-admin:hover {
     color: #ffffff;
-    background: #dc3545;
+    background: #b40000;
 }
 .cl-bold {
     font-weight: bold;
@@ -57,6 +60,10 @@ legend {
     text-decoration: none;
     color: darkred;
     border-bottom: 1px solid darkred;
+}
+.form-group .col-sm-4 label {
+    margin-right: 0.5rem;
+    margin-left: 0.5rem;
 }
 .navbar {
     padding-top: 17px;
