--- a/app/Resources/views/admin/rooms/view.html.twig
+++ b/app/Resources/views/admin/rooms/view.html.twig
@@ -4,36 +4,37 @@
 
     <div class="container body-content text-center">
         <h2>Room Details [ #{{ room.id }} ]</h2>
-        <p>Number: <span class="cl-bold"> {{ room.number }} </span></p> 
-        <p>Category: <a href="{{ path('admin_category_view', {id: room.category.id}) }}"> {{ room.category }} </a></p>
+        <p>
+            Number: <span class="cl-bold"> {{ room.number }} </span> |
+            Category: <a href="{{ path('admin_category_view', {id: room.category.id}) }}" class="cl-bold"> {{ room.category }} </a>
+        </p>
         <p>
             Beds: <span class="cl-bold"> {{ room.category.beds }} </span> | 
             Price: <span class="cl-bold"> ${{ room.category.price }} </span>
         </p>
-        <p><span class="cl-bold">Description: </span> {{ room.category.description }} </p>
         <p>
             <a class="btn btn-success btn-xs" href="{{ path('admin_room_edit', {id: room.id}) }}">Edit Room</a>
             <a class="btn btn-danger btn-xs" href="{{ path('admin_room_delete', {id: room.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Room</a>
         </p>
-        <h2>All stays for this room</h2>
-        {% if stays|length == 0 %} 
-            <p>No result for stays</p>
+        <h2>All bookings for this room</h2>
+        {% if bookings|length == 0 %} 
+            <p>No result for bookings</p>
         {% else %} 
             <div class="row">
                 <table class="table table-striped table-hover ">
                     <thead>
                     <tr>
-                        <th>Stay Id</th>
                         <th>Booking Id</th>
-                        <th>Guest</th> 
+                        <th>Checkin</th>
+                        <th>Checkout</th>
                     </tr>
                     </thead>
                     <tbody>
-                    {% for stay in stays %}
+                    {% for booking in bookings %}
                         <tr>
-                            <td><a href="{{ path('admin_stay_view', {id: stay.id}) }}"> {{ stay.id }} </a></td>
-                            <td><a href="{{ path('admin_booking_view', {id: stay.booking.id}) }}"> {{ stay.booking.id }} </a></td>
-                            <td><a href="{{ path('admin_guest_view', {id: stay.guest.id}) }}"> {{ stay.guest.firstname }} {{ stay.guest.fathersName }} {{ stay.guest.lastname }} </a></td>
+                            <td><a href="{{ path('admin_booking_view', {id: booking.id}) }}"> {{ booking.id }} </a></td>
+                            <td> {{ booking.checkin|date("Y-m-d") }} </td>
+                            <td> {{ booking.checkout|date("Y-m-d") }} </td>
                         </tr>
                     {% endfor %}
                     </tbody>
