--- a/app/Resources/views/admin/categories/view.html.twig
+++ b/app/Resources/views/admin/categories/view.html.twig
@@ -2,14 +2,12 @@
 
 {% block body %}
 
-    <div class="container body-content">
-        
-        
+    <div class="container body-content col-md-8 offset-md-2">
         <div class="row">
-            <div class="col-md-4 col-sm-12">
+            <div class="col-md-6">
                 <img src="{{ asset('uploads/images/categories/' ~ category.image)}}" alt="img" class="img-thumbnail">
             </div>
-            <div class="col-md-6 col-sm-12">
+            <div class="col-md-6">
                 <h2>{{ category.name }}</h2>
                 <p>{{ category.description }}</p>
                 <p>Beds: {{ category.beds }}</p>
