--- a/app/Resources/views/admin/guests/view.html.twig
+++ b/app/Resources/views/admin/guests/view.html.twig
@@ -19,7 +19,7 @@
                     <tr>
                         <th>Stay Id</th>
                         <th>Room Number</th>
-                        <th>Booking</th> 
+                        <th>Booking Id</th> 
                     </tr>
                     </thead>
                     <tbody>
