--- a/app/Resources/views/admin/bookings/edit.html.twig
+++ b/app/Resources/views/admin/bookings/edit.html.twig
@@ -3,107 +3,120 @@
 {% block body %}
 
     <div class="container body-content">
-        <div class="well">
-            <form class="form-horizontal" action="{{ path('admin_booking_edit', {id: booking.id}) }}" method="post">
-                <fieldset>
-                    <legend>Edit Booking</legend>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_category">Category</label>
-                        <div class="col-sm-4">
-                            <select class="form-control" id="booking_category" name="booking[category]">
-                                {% for category in categories %}
-                                    {% if ( booking.category.id == category.id)  %}
-                                        <option selected="selected" value="{{ category.id }}">
-                                            {{ category.name }}
-                                        </option>
-                                    {% else %}
-                                        <option value="{{ category.id }}">
-                                            {{ category.name }}
-                                        </option>
-                                    {% endif %}
-                                {% endfor %}
-                           </select>
-                        </div>
-                    </div>
-                 
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_checkin">Checkin</label>
-                        <div class="col-sm-4">
-                            <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]"  value="{{ booking.checkin|date("Y-m-d") }}">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_checkout">Checkout</label>
-                        <div class="col-sm-4">
-                            <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]"  value="{{ booking.checkout|date("Y-m-d")}}">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_adults">Adults</label>
-                        <div class="col-sm-4">
-                            <input type="number" class="form-control" id="booking_adults"  name="booking[adults]" value="{{ booking.adults}}">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_payment">Payment</label>
-                        <div class="col-sm-4">
-                            <select class="form-control" id="booking_payment" name="booking[payment]">
-                                {% for payment in payments %}
-                                    {% if ( booking.payment.id == payment.id)  %}
-                                        <option selected="selected" value="{{ payment.id }}">
-                                            {{ payment.name }}
-                                        </option>
-                                    {% else %}
-                                        <option value="{{ payment.id }}">
-                                            {{ payment.name }}
-                                        </option>
-                                    {% endif %}
-                                {% endfor %}
-                           </select>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_paidAmount">Paid Amount</label>
-                        <div class="col-sm-4">
-                            <input type="number" class="form-control" id="booking_paidAmount"  name="booking[paidAmount]" value="{{ booking.paidAmount }}">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="booking_status">Status</label>
-                        <div class="col-sm-4">
-                            <select class="form-control" id="booking_status" name="booking[status]">
-                                {% for status in statuses %}
-                                    {% if ( booking.status.id == status.id)  %}
-                                        <option selected="selected" value="{{ status.id }}">
-                                            {{ status.name }}
-                                        </option>
-                                    {% else %}
-                                        <option value="{{ status.id }}">
-                                            {{ status.name }}
-                                        </option>
-                                    {% endif %}
-                                {% endfor %}
-                           </select>
-                        </div>
-                    </div>
-                    
-                    <div class="form-group">
-                        <div class="col-sm-4 col-sm-offset-4">
-                            <a class="btn btn-primary" href="{{ path('admin_bookings') }}">Cancel</a>
-                            <button type="submit" class="btn btn-danger">Submit</button>
-                        </div>
-                    </div>
-                    {{  form_row(form._token) }}
-                </fieldset>
-            </form>
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <div class="well">
+                    <form class="form-horizontal" action="{{ path('admin_booking_edit', {id: booking.id}) }}" method="post">
+                        <fieldset>
+                            <legend>Edit Booking [ #{{ booking.id }} ]</legend>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_category">Category</label>
+                                <div class="col-sm-12">
+                                    <select class="form-control" id="booking_category" name="booking[category]">
+                                        {% for category in categories %}
+                                            {% if ( booking.category.id == category.id)  %}
+                                                <option selected="selected" value="{{ category.id }}">
+                                                    {{ category.name }}
+                                                </option>
+                                            {% else %}
+                                                <option value="{{ category.id }}">
+                                                    {{ category.name }}
+                                                </option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_room">Room</label>
+                                <div class="col-sm-12">
+                                    <select class="form-control" id="booking_room" name="booking[room]">
+                                        {% for room in rooms %}
+                                            {% if ( booking.room.id == room.id)  %}
+                                                <option selected="selected" value="{{ room.id }}">
+                                                    {{ room.number }} {{ room.category }}
+                                                </option>
+                                            {% else %}
+                                                <option value="{{ room.id }}">
+                                                    {{ room.number }} {{ room.category }}
+                                                </option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_checkin">Checkin</label>
+                                <div class="col-sm-12">
+                                    <input type="date" class="form-control" id="booking_checkin"  name="booking[checkin]"  value="{{ booking.checkin|date("Y-m-d") }}">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_checkout">Checkout</label>
+                                <div class="col-sm-12">
+                                    <input type="date" class="form-control" id="booking_checkout"  name="booking[checkout]"  value="{{ booking.checkout|date("Y-m-d")}}">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_adults">Adults</label>
+                                <div class="col-sm-12">
+                                    <input type="number" class="form-control" id="booking_adults"  name="booking[adults]" value="{{ booking.adults}}">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_payment">Payment</label>
+                                <div class="col-sm-12">
+                                    <select class="form-control" id="booking_payment" name="booking[payment]">
+                                        {% for payment in payments %}
+                                            {% if ( booking.payment.id == payment.id)  %}
+                                                <option selected="selected" value="{{ payment.id }}">
+                                                    {{ payment.name }}
+                                                </option>
+                                            {% else %}
+                                                <option value="{{ payment.id }}">
+                                                    {{ payment.name }}
+                                                </option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_paidAmount">Paid Amount</label>
+                                <div class="col-sm-12">
+                                    <input type="number" class="form-control" id="booking_paidAmount"  name="booking[paidAmount]" value="{{ booking.paidAmount }}">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="booking_status">Status</label>
+                                <div class="col-sm-12">
+                                    <select class="form-control" id="booking_status" name="booking[status]">
+                                        {% for status in statuses %}
+                                            {% if ( booking.status.id == status.id)  %}
+                                                <option selected="selected" value="{{ status.id }}">
+                                                    {{ status.name }}
+                                                </option>
+                                            {% else %}
+                                                <option value="{{ status.id }}">
+                                                    {{ status.name }}
+                                                </option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-6 col-sm-offset-3">
+                                    <a class="a-cancel" href="{{ path('admin_bookings') }}">Cancel</a>
+                                    <button type="submit" class="btn btn-danger">Submit</button>
+                                </div>
+                            </div>
+                        {{ form_row(form._token) }}
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
 {% endblock %}
-
