--- a/app/Resources/views/admin/rooms/edit.html.twig
+++ b/app/Resources/views/admin/rooms/edit.html.twig
@@ -3,34 +3,47 @@
 {% block body %}
 
     <div class="container body-content">
-        <div class="well">
-            <form class="form-horizontal" action="{{ path('admin_room_edit', {'id': room.id}) }}" method="POST">
-                <fieldset>
-                    <legend>Edit Room</legend>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="room_number">Number</label>
-                        <div class="col-sm-6">
-                            <input type="number" class="form-control" id="room_number" placeholder="Number" name="room[number]" value="{{ room.number }}">
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="room_category">Category</label>
-                        <div class="col-sm-6">
-                            {{ form_widget(form.category) }}
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <div class="col-sm-4 col-sm-offset-4">
-                            <a class="btn btn-default" href="{{ path('admin_rooms') }}">Cancel</a>
-                            <button type="submit" class="btn btn-danger">Submit</button>
-                        </div>
-                    </div>
-                    
-                    {{  form_row(form._token) }}
-                </fieldset>
-            </form>
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <div class="well">
+                    <form class="form-horizontal" action="{{ path('admin_room_edit', {'id': room.id}) }}" method="POST">
+                        <fieldset>
+                            <legend>Edit Room [ #{{ room.id }} ]</legend>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="room_number">Number</label>
+                                <div class="col-sm-12">
+                                    <input type="number" class="form-control" id="room_number" placeholder="Number" name="room[number]" value="{{ room.number }}">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-12 control-label" for="room_category">Category</label>
+                                <div class="col-sm-12">
+                                    <select class="form-control" id="room_category" name="room[category]">
+                                        {% for category in categories %}
+                                            {% if ( room.category.id == category.id)  %}
+                                                <option selected="selected" value="{{ category.id }}">
+                                                    {{ category.name }}
+                                                </option>
+                                            {% else %}
+                                                <option value="{{ category.id }}">
+                                                    {{ category.name }}
+                                                </option>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-6 col-sm-offset-3">
+                                    <a class="a-cancel" href="{{ path('admin_rooms') }}">Cancel</a>
+                                    <button type="submit" class="btn btn-danger">Submit</button>
+                                </div>
+                            </div>
+                            {{  form_row(form._token) }}
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     
