--- a/app/Resources/views/admin/stays/edit.html.twig
+++ b/app/Resources/views/admin/stays/edit.html.twig
@@ -3,36 +3,63 @@
 {% block body %}
 
     <div class="container body-content">
-        <div class="well">
-            <form class="form-horizontal" action="{{ path('admin_stay_edit', {'id': stay.id}) }}" method="POST">
-                <legend>Edit Stay</legend>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="stay_booking">Booking</label>
-                        <div class="col-sm-4">
-                            {{ form_widget(form.booking) }}
+        <div class="row">
+            <div class="col-sm-6 offset-sm-3">
+                <div class="well">
+                    <form class="form-horizontal" action="{{ path('admin_stay_edit', {'id': stay.id}) }}" method="POST">
+                        <legend>Edit Stay [ #{{ stay.id }} ]</legend>
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="stay_booking">Booking</label>
+                            <div class="col-sm-12">
+                                <select class="form-control" id="stay_booking" name="stay[booking]">
+                                    {% for booking in bookings %}
+                                        {% if ( stay.booking.id == booking.id)  %}
+                                            <option selected="selected" value="{{ booking.id }}">
+                                                {{ booking.id }} ( Reserved by email: {{ booking.userId.email }} )
+                                            </option>
+                                        {% else %}
+                                            <option value="{{ booking.id }}">
+                                                {{ booking.id }} ( Reserved by email: {{ booking.userId.email }} )
+                                            </option>
+                                        {% endif %}
+                                    {% endfor %}
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="stay_guest">Guest</label>
-                        <div class="col-sm-4">
-                            {{ form_widget(form.guest) }}
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="stay_guest">Guest</label>
+                            <div class="col-sm-12">
+                                <select class="form-control" id="stay_guest" name="stay[guest]">
+                                    {% for guest in guests %}
+                                        {% if ( stay.guest.id == guest.id)  %}
+                                            <option selected="selected" value="{{ guest.id }}">
+                                                {{ guest.personalNumber }} {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }}
+                                            </option>
+                                        {% else %}
+                                            <option value="{{ guest.id }}">
+                                                {{ guest.personalNumber }} {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }}
+                                            </option>
+                                        {% endif %}
+                                    {% endfor %}
+                                </select>
+                            </div>
                         </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="col-sm-4 control-label" for="stay_note">Note</label>
-                        <div class="col-sm-4 ">
-                            <input type="text" class="form-control" id="stay_note" name="stay[note]" value="{{ stay.note }}">
+                        <div class="form-group">
+                            <label class="col-sm-12 control-label" for="stay_note">Note</label>
+                            <div class="col-sm-12">
+                                <textarea class="form-control" name="stay[note]" id="stay_note" rows="6">{{ stay.note }}</textarea> 
+                            </div>
                         </div>
-                    </div> 
-                    <div class="form-group">
-                        <div class="col-sm-4 col-sm-offset-4">
-                            <a class="btn btn-default" href="{{ path('admin_stays') }}">Cancel</a>
-                            <button type="submit" class="btn btn-danger">Submit</button>
+                        <div class="form-group">
+                            <div class="col-sm-6 col-sm-offset-3">
+                                <a class="a-cancel" href="{{ path('admin_stays') }}">Cancel</a>
+                                <button type="submit" class="btn btn-danger">Submit</button>
+                            </div>
                         </div>
-                    </div>
-                    {{  form_row(form._token) }}
-                </fieldset>
-            </form>
+                        {{  form_row(form._token) }}
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     
