--- a/app/Resources/views/admin/guests/list.html.twig
+++ b/app/Resources/views/admin/guests/list.html.twig
@@ -51,7 +51,7 @@
                         <td>
                             <a href="{{ path('admin_guest_view', {id: guest.id}) }}" target=_blank>View</a>
                             <a href="{{ path('admin_guest_edit', {id: guest.id}) }}" target=_blank>Edit</a>
-                            <a href="{{ path('admin_guest_delete', {id: guest.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete</a>
+                            <a href="{{ path('admin_guest_delete', {id: guest.id}) }}" onClick="return confirm('Are you sure you want to delete {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} ?')">Delete</a>
                         </td>
                     </tr>
                 {% endfor %}
