--- a/app/Resources/views/admin/guests/view.html.twig
+++ b/app/Resources/views/admin/guests/view.html.twig
@@ -7,7 +7,7 @@
         <h4>Email: {{ guest.email }} | Phone: {{ guest.phone }}</h4>
         <p>
             <a class="btn btn-success btn-xs" href="{{ path('admin_guest_edit', {id: guest.id}) }}">Edit Guest</a>
-            <a class="btn btn-danger btn-xs" href="{{ path('admin_guest_delete', {id: guest.id}) }}" onClick="return confirm('Are you sure you want to delete?')">Delete Guest</a>
+            <a class="btn btn-danger btn-xs" href="{{ path('admin_guest_delete', {id: guest.id}) }}" onClick="return confirm('Are you sure you want to delete {{ guest.firstName }} {{ guest.fathersName }} {{ guest.lastName }} ?')">Delete Guest</a>
         </p>
         <h2>All stays for this guest</h2>
         {% if stays|length == 0 %} 
