--- a/app/Resources/views/admin/bookings/edit.html.twig
+++ b/app/Resources/views/admin/bookings/edit.html.twig
@@ -60,7 +60,13 @@
                             <div class="form-group">
                                 <label class="col-sm-12 control-label" for="booking_adults">Adults</label>
                                 <div class="col-sm-12">
-                                    <input type="number" class="form-control" id="booking_adults"  name="booking[adults]" value="{{ booking.adults}}">
+                                    <input type="number" class="form-control" id="booking_adults"  name="booking[adults]" value="{{ booking.adults }}">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="col-sm-12">
+                                    <input type="checkbox" name="booking[childBed]" {% if ( booking.childBed == 1 ) %} ( checked="checked" ) {% endif %} >
+                                    <label for="booking_childBed">I want a child bed</label>
                                 </div>
                             </div>
                             <div class="form-group">
