--- a/app/Resources/views/users/createBooking.html.twig
+++ b/app/Resources/views/users/createBooking.html.twig
@@ -31,6 +31,12 @@
                         </div>
                     </div>
                     <div class="form-group">
+                        <div class="col-sm-12">
+                            <input type="checkbox" id="booking_childBed"  name="booking[childBed]" />
+                            <label for="booking_childBed">I want a child bed</label>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="col-sm-12 control-label" for="booking_payment">Payment</label>
                         <div class="col-sm-12">
                             <select class="form-control" id="booking_payment" name="booking[payment]">
