add list roles, create role in admin panel

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -43,6 +43,8 @@
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('admin_payments') }}">Payments</a>
                                         <div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{{ path('admin_roles') }}">Roles</a>
+                                        <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('admin_rooms') }}">Rooms</a>
                                         <div class="dropdown-divider"></div>
                                         <a class="dropdown-item" href="{{ path('admin_statuses') }}">Statuses</a>
